Fix render.yaml configuration

--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,12 @@
 services:
   - type: web
-    name: kfc-voice-ai-delivery
+    name: kfc-live
     runtime: static
+    rootDir: ""
     buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    staticPublishPath: dist
     envVars:
-      - key: API_KEY
+      - key: GEMINI_API_KEY
         sync: false
     headers:
       - path: /*
@@ -14,6 +15,9 @@ services:
       - path: /*
         name: Access-Control-Allow-Origin
         value: "*"
+      - path: /*
+        name: Content-Security-Policy
+        value: "frame-ancestors *"
     routes:
       - type: rewrite
         source: /*
