--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Static Site - Frontend
   - type: web
     name: kfc-live
     runtime: static
@@ -22,3 +23,15 @@ services:
       - type: rewrite
         source: /*
         destination: /index.html
+
+  # Background Worker - Telegram Bot
+  - type: worker
+    name: kfc-live-bot
+    runtime: docker
+    dockerfilePath: ./bot/Dockerfile
+    dockerContext: ./bot
+    envVars:
+      - key: TELEGRAM_BOT_TOKEN
+        sync: false
+      - key: WEBAPP_URL
+        value: https://kfc-live.onrender.com
